--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="" alt="">
+        <img src="logo-removebg-preview.png" alt="Banane">
     </header>
     <nav>
         <a href="index.html">Home</a>
