--- a/reports.html
+++ b/reports.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="" alt="">
+        <img src="logo-removebg-preview.png" alt="Banane">
     </header>
     <nav>
         <a href="index.html">Home</a>
@@ -24,7 +24,48 @@
         <a href="reports.html">Reports</a>
     </nav>
     <main>
-        Inhalt
+        <section>
+            <h2>Bericht zum 12. Geschäftsjahr</h2>
+            Das 12. Geschäftsjahr war insgesamt sehr erfolgreich vor allem in Anbetracht unserer investitionen. <br>
+            <h3>Höhepunkte:</h3>
+            Wir konnten viel mehr Einheiten verkaufen. Ausserdem haben wir es geschafft uns stabil zu halten, trotz
+            unserer grossen Investitionen.
+            <h4>Marktpräsenz:</h4>
+            Unsere präsenz ist gestiegen und wir konnten uns einen Platz im Mark sichern.
+            <h4>Kostenoptimierung</h4>
+            Durch unsere Investitionen in moderne Maschinen und den Ausbau in unsere Mitarbeiter, konnten wir uns auch
+            sehr gut absetzen.
+            <h4>Produktinnovation:</h4>
+            Wir konnten durch grosse Investitionen in usere Forschung ein modernes Produkt erstellen, welches sich von
+            der Konkurenz abhebt.
+        </section>
+        <section>
+            <h2>Bericht zum 11. Geschäftsjahr:</h2>
+            Das 11. Geschäftsjahr war insgesamt erfolgreich und zufriedenstellend.<br>
+            Unsere Geschäftstätigkeiten verliefen weitgehend reibungslos, und wir konnten unsere wichtigsten Ziele
+            erreichen.
+            <h3>Höhepunkte:</h3>
+            Umsatzsteigerung: <br> Wir konnten einen erheblichen Umsatzanstieg verzeichnen, der unsere Erwartungen
+            übertroffen hat.
+            <h4>Marktpräsenz: </h4>
+            Unsere Präsenz auf dem Markt wurde gestärkt, und wir haben neue Kunden gewonnen.
+            <h4>Kostenoptimierung: </h4>
+            Durch Effizienzsteigerungen konnten wir Kosten senken und die Rentabilität
+            verbessern.
+            <h4>Feinschliffe:</h4>
+            Obwohl das Jahr erfolgreich war, gibt es noch einige Bereiche, in denen wir Verbesserungen
+            vornehmen können.
+            <h4>Diese umfassen:</h4>
+            Produktinnovation: <br>
+            Wir sollten unsere Bemühungen in der Produktentwicklung verstärken, um wettbewerbsfähig zu
+            bleiben. <br>
+            Mitarbeiterentwicklung: <br>
+            Die Weiterbildung unserer Mitarbeiter ist entscheidend, um unser Team zu stärken und
+            Talente zu fördern.
+
+            Insgesamt sind wir zuversichtlich, dass wir diese Feinschliffe erfolgreich umsetzen können, um im nächsten
+            Geschäftsjahr noch besser abzuschneiden.
+        </section>
     </main>
     <footer>
 
