--- a/reports.html
+++ b/reports.html
@@ -24,7 +24,11 @@
         <a href="reports.html">Reports</a>
     </nav>
     <main>
-        <section>
+        <div class="checkboxDiv">
+            <label for="cb12">Press for report 12</label>
+        </div>
+        <input type="checkbox" id="cb12" name="cb12">
+        <section id="gj12">
             <h2>Bericht zum 12. Geschäftsjahr</h2>
             Das 12. Geschäftsjahr war insgesamt sehr erfolgreich vor allem in Anbetracht unserer investitionen. <br>
             <h3>Höhepunkte:</h3>
@@ -39,7 +43,11 @@
             Wir konnten durch grosse Investitionen in usere Forschung ein modernes Produkt erstellen, welches sich von
             der Konkurenz abhebt.
         </section>
-        <section>
+        <div class="checkboxDiv">
+            <label for="cb11">Press for report 11</label>
+        </div>
+        <input type="checkbox" name="cb11" id="cb11">
+        <section id="gj11">
             <h2>Bericht zum 11. Geschäftsjahr:</h2>
             Das 11. Geschäftsjahr war insgesamt erfolgreich und zufriedenstellend.<br>
             Unsere Geschäftstätigkeiten verliefen weitgehend reibungslos, und wir konnten unsere wichtigsten Ziele
