--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,12 @@
         <a href="reports.html">Reports</a>
     </nav>
     <main>
-
+        <h2>Wer sind wir?</h2>
+        <p>Wir sind ein innovatives Unternehmen, welches nicht nur auf Qualität unserer Produkte setzt sondern auch auf
+            die Technik dahinter und achten besonders darauf, dass wir ein Produkt bieten, welches jeder Kunde selbst
+            verändern kann und auf seine eigenen Bedürfnisse anpassen kann. Durch unsere Modularität und die möglichkeit
+            jederzeit Teile auszutauschen, konnten wir sogar den grössten Umweltindex Wert erzielen. Und dies zu einem
+            fairen Preis. </p>
     </main>
     <footer>
 
