--- a/investorrelations.html
+++ b/investorrelations.html
@@ -25,7 +25,10 @@
         <a href="reports.html">Reports</a>
     </nav>
     <main>
-
+        <h1>Börsen Kurs</h1>
+        <img class="investorimage" src="Media/Börsenkurs.png" alt="Börsenkurs steigend">
+        <h1>Umsatz</h1>
+        <img class="investorimage" src="Media/umsatz.png" alt="Umsatz">
     </main>
     <footer>
 
