--- a/ourproducts.html
+++ b/ourproducts.html
@@ -25,6 +25,11 @@
         <a href="reports.html">Reports</a>
     </nav>
     <main>
+        <h1>Chrono-Custom</h1>
+        <div>
+            <img id="prodImageCCC" src="Media/ProductImageCCC.png" alt="ProductImage">
+            <p>Die modularste, flexibelste, modernste Uhr auf dem Markt. </p>
+        </div>
 
     </main>
     <footer>
