--- a/reports.html
+++ b/reports.html
@@ -17,10 +17,11 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="">Shop</a>
-        <a href="">Vision</a>
-        <a href="">Contact</a>
-        <a href="">Dis Mami</a>
+        <a href="aboutus.html">Über uns</a>
+        <a href="management.html">Management</a>
+        <a href="ourproducts.html">Unsere Produkte</a>
+        <a href="responsibility.html">Verantwortung</a>
+        <a href="investorrelations.html">Investor Relations</a>
         <a href="reports.html">Reports</a>
     </nav>
     <main>
