--- a/responsibility.html
+++ b/responsibility.html
@@ -25,7 +25,16 @@
         <a href="reports.html">Reports</a>
     </nav>
     <main>
-
+        <h1>Umwelt</h1>
+        <p>All unsere Resourcen sind aus nachhaltiger Produktion oder rezykliert. Einen brisanten Teil unseres Gewinns
+            in nachhaltige Produktionsverfahren und in Weiterbildungen unserer Angestellten, um einen kleineren
+            Materialverschleiss zu erhalten.
+        </p>
+        <h1>Unsere Smartwatch</h1>
+        <p>
+            Unsere Uhr hat einen Umweltindex von 8.3 erreicht und ist somit einer der umweltfreundlichsten Uhren die es
+            gibt, wenn nicht sogar die Umweltfreundlichste.
+        </p>
     </main>
     <footer>
 
