--- a/management.html
+++ b/management.html
@@ -25,7 +25,7 @@
         <a href="reports.html">Reports</a>
     </nav>
     <main>
-
+        <img src="Media/organigram.png" alt="Oragnigramm" id="organigramm">
     </main>
     <footer>
 
