--- a/investorrelations.html
+++ b/investorrelations.html
@@ -29,6 +29,8 @@
         <img class="investorimage" src="Media/Börsenkurs.png" alt="Börsenkurs steigend">
         <h1>Umsatz</h1>
         <img class="investorimage" src="Media/umsatz.png" alt="Umsatz">
+        <h1>EBIT und Reingewinn</h1>
+        <img class="investorimage" src="Media/ebit.png" alt="Ebit und Reingewinn">
     </main>
     <footer>
 
