--- a/reports.html
+++ b/reports.html
@@ -26,6 +26,60 @@
     </nav>
     <main>
         <div class="checkboxDiv">
+            <label for="cb15">Press for report 15</label>
+        </div>
+        <input type="checkbox" name="cb15" id="cb15">
+        <section id="gj15">
+            <h2>Bericht zum 15. Geschäftsjahr</h2>
+            Dies ist unser schlechtestes Jahr, da wir durch Fehlkalkulationen zu viel produziert haben.
+            <h3>Höhepunkte</h3>
+            Wir haben unsere verkaufszahlen vervielfacht und haben damit einen Reinverlust verhindern können.
+            <h3>Kostenoptimierung</h3>
+            Wir haben mehrere Maschinen der alten Generation verkauft und der neueren Generation gekauft. Wir haben auch
+            noch mehr in usere Mitarbeiter investiert, um die Effizienz noch mehr zu steigern und Kosten optimieren.
+            <h3>Produktentwicklung</h3>
+            Wir haben unser Produkt wieder um einiges entwickeln können um unser Alleinstellungsmerkmal beizubehalten.
+        </section>
+        <div class="checkboxDiv">
+            <label for="cb14">Press for report 14</label>
+        </div>
+        <input type="checkbox" name="cb14" id="cb14">
+        <section id="gj14">
+            <h2>Bericht zum 14. Geschäftsjahr</h2>
+            Das Geschäftsjahr 14 ist sehr gut verlaufen, wir haben unseren Gewinn ver 2.5 facht.
+            <h3>Höhepunkte</h3>
+            Durch massive investitionen in die Forschung des Produkts gesteckt und haben damit einen massiven Gewinn
+            gemacht.
+            <h3>Marktpräsenz</h3>
+            Wir haben unsere Präsenz um einiges gesteigert durch die massiv mehr verkauften Stücken.
+            <h3>Kostenoptimierung</h3>
+            Wir haben das fünffache investiert in Weiterbildungen für unsere Mitarbeiter und haben auch in die neusten
+            Maschinen investiert um noch effizienter zu produzieren.
+            <h3>Produktentwicklung</h3>
+            Wir haben das dreifache in ddie Produktforschung und entwicklung investiert und haben damit unser
+            alleinstellungsmerkmal als modernstes Produkt sichern können.
+        </section>
+        <div class="checkboxDiv">
+            <label for="cb13">Press for report 13</label>
+        </div>
+        <input type="checkbox" name="cb13" id="cb13">
+        <section id="gj13">
+            <h2>Bericht zum 13. Geschäftsjahr</h2>
+            Das Geschäftsjahr 13 ist durchschnittlich verlaufen, wir haben weder besonders gewinn gemacht noch verlust.
+            <h3>Höhepunkte</h3>
+            Wir haben unsere Produktqualität um einiges verbessert. Ausserdem haben wir unsere Materialien aus einer
+            ökologischen Quelle. Somit konnten wir das ökologischste Produkt erstellen mit einem Indexwert von 8.3
+            <h3>Marktpräsenz</h3>
+            Wir konnten unsere Marktpräsenz als ökologischer und hochwertiger Produzent sichern.
+            <h3>Kostenoptimierung</h3>
+            Wir haben mehr Geld in die Mitarbeiter gesteckt um effizientere und ressourcensparende Mitarbeiter zu
+            bekommen, dies erzielen wir, indem diese Mitarbeiter sich weiterbilden lassen.
+            <h3>Produktentwicklung</h3>
+            Wir haben unsere Materialien und Qualität dieser erhöht um ein noch besseres und ökologischeres Produkt zu
+            erhalten.
+
+        </section>
+        <div class="checkboxDiv">
             <label for="cb12">Press for report 12</label>
         </div>
         <input type="checkbox" id="cb12" name="cb12">
