Last push I swear

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         <a href="reports.html">Reports</a>
     </nav>
     <main>
-        <video controls src="Media/Werbung.mp4" type="video/mp4">
-            Your browser doesn't support video CYKA
-        </video>
+        <div id="videocont">
+            <video controls src="Media/Werbung.mp4" type="video/mp4">
+                Your browser doesn't support video CYKA
+            </video>
+        </div>
+
     </main>
     <footer>
 
